# GT7-Shaker-for-linux

./: .gitignore  README.md  gt7-shaker_1.30_all.deb  pyproject.toml  requirements.txt
src/gt_shaker/: Simulated_Road.py  audio_processor.py  audio_utils.py  main.py  network_manager.py  tire_processor.py  web_app.py
src/gt_shaker/templates/: index.html  manual.html
